| Summary: | ASTERISK-28832: chan_mobile creates PCMA streams that make some VoIP clients crash or not render received audio | ||
| Reporter: | Peter Turczak (ptwz) | Labels: | |
| Date Opened: | 2020-04-15 02:38:03 | Date Closed: | 2020-04-27 16:56:06 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_mobile |
| Versions: | 16.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Tested and debugged on debian stretch on arm hardware (RPi 3). VoIP clients: - Gigaset VoIP N510 Pro (no audio) - Yeahlink SIP-T54W (no audio) - Linux VoIP client (crashes, not yet disclosed) BT Hardware: - iPhone XS - iPad Mini 3 - Samsung Galaxy GT-S7582 Logical setup: User A <-> Mobile Network <-> BT-Hardware <-> chan_mobile <-> asterisk <-> pjsip <-> VoIP Client <-> User B | Attachments: | |
| Description: | When using above combination, various VoIP clients (at user B's side) behave erratically.
The problem occur to both calls from user A to user B and vice-versa. In both cases, audio from B gets to A flawlessly. Audio from B to A either is replaced by silence on B's end or crashes the client altogether. Using wireshark at B's side, both audio streams played flawlessly. I saw that A->B packets contained only 48 byte payload per packet, while B-> A contained 160 byte payload/packet. I built several test fixtures and found out that RTP data frames with payload length below approximatly 80 bytes will crash or make several clients go deaf. Reading RFC 3551, section 4.2 states: {quote} A receiver SHOULD accept packets representing between 0 and 200 ms of audio data. (For framed audio encodings, a receiver SHOULD accept packets with a number of frames equal to 200 ms divided by the frame duration, rounded up.) This restriction allows reasonable buffer sizing for the receiver. {quote} So this is basically a client issue, but all clients available to me are affected. To try out my theory, I built a patch for asterisk to use a smoother to repacketize the incoming stream from the BT device to the channel frame size. I'd like to contribute my patch if there is interest in it. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-15 02:38:05.403-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: George Joseph (gjoseph) 2020-04-15 08:33:16.458-0500 Hi [~ptwz]. Contributions are always welcomed! Please take a look at the Patch Contribution Process wiki page linked in the previous comment. Once your contributor license agreement is approved, you should be able to submit your patch for review. By: Peter Turczak (ptwz) 2020-04-15 08:35:58.340-0500 Thanks, I already signed the contributor agreement. As soon as I get the feedback from your legal department a patch should appear in gerrit. By: Friendly Automation (friendly-automation) 2020-04-27 16:56:07.625-0500 Change 14320 merged by Friendly Automation: chan_mobile: Add smoother to make SIP/RTP endpoints happy. [https://gerrit.asterisk.org/c/asterisk/+/14320|https://gerrit.asterisk.org/c/asterisk/+/14320] By: Friendly Automation (friendly-automation) 2020-04-27 17:03:26.121-0500 Change 14265 merged by Friendly Automation: chan_mobile: Add smoother to make SIP/RTP endpoints happy. [https://gerrit.asterisk.org/c/asterisk/+/14265|https://gerrit.asterisk.org/c/asterisk/+/14265] By: Friendly Automation (friendly-automation) 2020-04-27 17:55:03.290-0500 Change 14341 merged by Kevin Harwell: chan_mobile: Add smoother to make SIP/RTP endpoints happy. [https://gerrit.asterisk.org/c/asterisk/+/14341|https://gerrit.asterisk.org/c/asterisk/+/14341] By: Friendly Automation (friendly-automation) 2020-04-27 17:55:26.846-0500 Change 14342 merged by Kevin Harwell: chan_mobile: Add smoother to make SIP/RTP endpoints happy. [https://gerrit.asterisk.org/c/asterisk/+/14342|https://gerrit.asterisk.org/c/asterisk/+/14342] | ||